--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" th:href="@{/public/favicon.ico}" type="image/x-icon"/>
+    <link rel="bookmark" th:href="@{/public/favicon.ico}" type="image/x-icon"/>
 </head>
 <body>
     首页
